kubernetes/apps/media-server/radarr/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  oidc:
    provider:
      issuer: https://authentik.${DOMAIN}/application/o/radarr/
      authorizationEndpoint: https://authentik.${DOMAIN}/application/o/authorize/
      tokenEndpoint: https://authentik.${DOMAIN}/application/o/token/
      endSessionEndpoint: https://authentik.${DOMAIN}/application/o/radarr/end-session/
    clientID: radarr
    clientSecret:
      name: radarr-oidc
    redirectURL: https://radarr.${DOMAIN}/oauth2/callback
    logoutPath: /logout
    scopes: ["openid", "email", "profile"]
